# bot/src/bot/external/abstractions/minecraft_server_service.py
@@ -1,8 +1,8 @@
 from abc import ABC, abstractmethod
 
+from bot.models.logs_response import LogsResponse
 from bot.models.minecraft_server_info import MinecraftServerInfo
 from bot.models.minecraft_server_status import MinecraftServerStatus
-from bot.models.logs_response import LogsResponse
 from bot.models.resource_usage import ResourceUsage
 
 
@@ -25,4 +25,20 @@ class MinecraftServerService(ABC):
 
     @abstractmethod
     def command(self, command: str) -> dict:
+        pass
+
+    @abstractmethod
+    def install_mod_url(self, url: str) -> dict:
+        pass
+
+    @abstractmethod
+    def install_mod_file(self, filename: str, file_bytes: bytes) -> dict:
+        pass
+
+    @abstractmethod
+    def list_mods(self) -> dict:
+        pass
+
+    @abstractmethod
+    def remove_mod(self, filename: str) -> dict:
         pass
