# server_handler/internal/mc_server/mc_server_interface.go
@@ -2,6 +2,7 @@ package mcserver
 
 import (
 	"context"
+	"io"
 
 	"github.com/GustaMantovani/Admine/server_handler/internal/mc_server/models"
 )
@@ -16,4 +17,7 @@ type MinecraftServer interface {
 	Logs(ctx context.Context, n int) ([]string, error)
 	StartUpInfo(ctx context.Context) string
 	ExecuteCommand(ctx context.Context, command string) (*models.CommandResult, error)
+	InstallMod(ctx context.Context, fileName string, modData io.Reader) (*models.ModInstallResult, error)
+	ListMods(ctx context.Context) (*models.ModListResult, error)
+	RemoveMod(ctx context.Context, fileName string) (*models.ModInstallResult, error)
 }
